--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h2>Status</h2>
 
-<p>Please note that this is a very early stage version, so not everything may be working! File bug requests for any bugs your encounter.</p>
+<p>Please note that this is a very early stage version, so not everything may be working! File bug reports for any bugs your encounter.</p>
         </section>
 
         <aside id="sidebar">
